# SFRA-FULL

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  REFACTOR_MAP.md  SFRA_FULL_Requirements.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260426_0001_initial.py  20260430_0002_user_auth.py  20260430_0003_audit_event.py  20260430_0004_audit_hash_chain.py
assets/branding/: README.txt
docs/: DECISIONS.md  OPERATIONS.md
docs/design/: DESIGN_SYSTEM.md  README.md  SKILL.md  chat-transcript.md  ui-kit-prototype.html
docs/design/preview/: colors-brand.html  colors-neutral.html  colors-semantic.html  component-buttons.html  component-cards.html  component-inputs.html  component-severity.html  component-table.html  component-tabs.html  component-verdicts.html  spacing-tokens.html  type-mono.html  type-scale.html
frontend/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: Card.tsx  DiffPlot.tsx  Header.tsx  SfraPlot.tsx  TabNav.tsx  VerdictBadge.tsx
frontend/src/styles/: design-tokens.css
frontend/src/tabs/: ComparisonTab.tsx  DashboardTab.tsx  DiagnosisTab.tsx  ModelingTab.tsx  ReportTab.tsx  TracesTab.tsx  UploadTab.tsx
scripts/: demo.sh  docker-entrypoint.sh  seed_combinations.py  setup_external.sh  validate_catalogue.py
src/sfra_full/: __init__.py  cli.py
src/sfra_full/api/: __init__.py  app.py  deps.py  schemas.py
src/sfra_full/api/routes/: analyses.py  audit.py  auth.py  health.py  reports.py  sessions.py  standards.py  traces.py  transformers.py
src/sfra_full/audit/: __init__.py  chain.py  models.py  recorder.py
src/sfra_full/auth/: __init__.py  deps.py  jwt.py  models.py  password.py  sso.py
src/sfra_full/db/: __init__.py  array_helpers.py  base.py  enums.py  models.py
src/sfra_full/reports/: __init__.py  pdf.py  xlsx.py
src/sfra_full/sfra_analysis/: __init__.py  bands.py  compare.py  resample.py  result_types.py  runner.py  standalone.py  statistical.py  transfer.py  verdict.py
src/sfra_full/sfra_analysis/io/: __init__.py  base.py  combination_resolver.py  csv.py  dispatch.py  doble.py  frax.py  omicron.py
src/sfra_full/storage/: __init__.py  filesystem.py
standards/: ieee_c57_149_combinations.yaml
tests/: conftest.py
tests/integration/: __init__.py  test_api.py  test_audit_thresholds.py  test_auth.py  test_db.py  test_reports.py  test_storage.py
tests/unit/: __init__.py  test_bands.py  test_catalogue.py  test_io.py  test_oem_parsers.py  test_resample.py  test_runner.py  test_standalone.py  test_statistical.py
